--- a/pyproject.toml
+++ b/pyproject.toml
@@ -124,6 +124,7 @@ dependencies = [
     "flasgger>=0.9.7.1,<0.10.0",
     "xxhash>=3.5.0,<4.0.0",
     "trio>=0.29.0",
+    "uvicorn[standard]>=0.34.0",
 ]
 
 [project.optional-dependencies]
